--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,7 @@ resources:
   repositories:
   - repository: MyGitHubRepo1
     type: github
+    endpoint: githubconnection
     name: Meiling-github/githubrepo1
   - repository: MyGitHubRepo2
     type: github
